0.1.5.2 - 2012 July 08:
 * Implement support for new options framework

0.1.5.1 - 2012 June 16:
 * Fix reading of new option format

0.1.5 - 2012 May 28:
 * Added '-j' option to tune concurrency
 * Removed '--force' and '--force-all' option to simplify code
 * Major rewrite of stage handling code
 * Initial work for splitting the repo method into multiple stages
 * Use a separate log directory for chroot builds.
 * Use the DependHandler to install ports (i.e. explicit ports can now be
    installed directly from repo or package if --method prescribes that)
 * Fixes:
   * Partial fix for bug 0.1.3.1-0 (superseded by bug 0.1.5-0)
   * Fix the "0 failed" Top-interface bug
   * Properly display information about failed ports
   * Mark dependencies as such (-DINSTALLS_DEPENDS, `pkg set -a 1`)
   * Properly detect installed ports (only match port origin)

0.1.4.1 - 2012 April 23:
 * Fixes:
   * Fix assertion for Port.build_stage (error prevented any port building)
   * Suppress questions from pkgng (s/ALWAYS_ASSUME_YES/ASSUME_ALWAYS_YES/)

0.1.4 - 2012 April 22:
 * Support pkgng as an alternative package manager
 * Support installing packages from a repository
 * Support port pre-cleaning
 * Support dynamic defaults from /etc/make.conf (i.e. DEPENDS_(PRE)CLEAN)
 * Major code cleanup and refactor effort
 * Switch to a revised milestone schedule
 * Fixes:
   * Fix assertion when using PKGINSTALL builder
   * If kevent fails with EINTR then retry command again

0.1.3.1 - 2011 July 21:
 * Install project meta files, for port
 * Add copyright notice (FreeBSD style BSD license)
 * Fixes:
   * Ordering of ports in Top-style monitor
   * Upgrading multiple ports with -u flag (-U is preferred)
   * Many fixes to the build logic (depend resolution and stage checks)

0.1.3: 2011 June 19:
 * Implemented a kqueue (external) event handler
 * Remove the use of callback (use Signal instead)
 * Add multiple methods (with fallback) to resolve a port