@@ -1,3 +1,6 @@
+X.Y.Z - YYYY MMM DD:
+ * Dynamically work around python issue 11973
+
 0.1.5.2 - 2012 July 08:
  * Implement support for new options framework
 
